# django-bulk-tracker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/wokrflows/: tests.yml
.github/workflows/: release.yml  tests.yml
bulk_tracker/: __init__.py  apps.py  collector.py  helper_objects.py  managers.py  models.py  signals.py  utils.py
docs/source/: conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  managers.py  models.py  settings.py  test_create_signal.py  test_delete_signal.py  test_queryset.py  test_update_signal.py
