[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2
atomic = true

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
]
