[metadata]
name = django-bulk-tracker
version = attr: bulk_tracker.__version__
description = A Django app that allows you to have more control over bulk operations.
long_description = file: README.md
url = https://github.com/hassaanalansary/django-bulk-tracker
author = Hassaan Alansary
author_email = hassaanalansary@yahoo.com
license = Mozilla Public License 2.0
keywords =
    django
    django-bulk-tracker
    bulk-update
    bulk-create
    signals
    django-signals

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django>=3.2
    django-model-utils>=4.0.0

[options.extras_require]
testing =
    pytest>=7.2.1
    tox>=4.4.5
